--- a/sway/config
+++ b/sway/config
@@ -140,7 +140,6 @@ workspace 1
 exec --no-startup-id pgrep spotify || exec spotify
 exec ferdium --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec swww restore
-exec 1password
 
 # Set default brightness
 exec brightnessctl set 100%
@@ -176,21 +175,21 @@ titlebar_padding 1
 titlebar_border_thickness 0
 
 #swayfx
-smart_corner_radius on
-corner_radius 10
-default_dim_inactive 0.05
-blur_xray disable
-blur enable
-blur_passes 1
-blur_radius 1
-blur_noise 0
-blur_brightness 0.9
-blur_contrast 1
-blur_saturation 1
-layer_effects "waybar" "blur enable"; shadows enable
-layer_effects "mako" "blur enable"; shadows enable
-shadows on
-shadow_blur_radius 40
+# smart_corner_radius on
+# corner_radius 10
+# default_dim_inactive 0.05
+# blur_xray disable
+# blur enable
+# blur_passes 1
+# blur_radius 1
+# blur_noise 0
+# blur_brightness 0.9
+# blur_contrast 1
+# blur_saturation 1
+# layer_effects "waybar" "blur enable"; shadows enable
+# layer_effects "mako" "blur enable"; shadows enable
+# shadows on
+# shadow_blur_radius 40
 
 # ETC default config removed from include to keep configs in one file
 exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
