--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -114,15 +114,7 @@ append_previewers = [
   { mime = "text/csv", run = "miller" },
 ]
 
-preloaders = [
-  { name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
-  # Image
-  { mime = "image/*", run = "image" },
-  # Video
-  { mime = "video/*", run = "video" },
-  # PDF
-  { mime = "application/pdf", run = "pdf" },
-]
+preloaders = []
 previewers = [
   { name = "*/", run = "folder", sync = true },
   # Code
