--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -771,9 +771,12 @@ desc = "Open shell here"
 
 [[manager.prepend_keymap]]
 on = ["<C-w>"]
-run = ['''
-	shell 'swww img "$@" --transition-duration 1 --transition-type=random'
-''', "yank"]
+run = [
+  '''
+	shell --interactive 'swww img "$@" --transition-duration 1 --transition-type=random'
+''',
+  "yank",
+]
 desc = "Set file as wallpaper"
 
 [[manager.prepend_keymap]]
