--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,7 +61,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavor 'mocha'
 set -g status-interval 1
 set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_default_text "#W"
