save wallpapers config

--- a/sway/config
+++ b/sway/config
@@ -18,7 +18,8 @@ bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 exec swww-daemon
 bindsym $mod+r exec swww img "$(random_wllppr)" --transition-duration 1 --transition-type=random
 bindsym $mod+shift+r exec swww img "$(get_wllppr)" --transition-duration 1 --transition-type=random
-bindsym $mod+s exec alacritty -e yazi ~/Pictures/favs
+bindsym $mod+s exec notify-send "$(favwall)"
+bindsym $mod+shift+s exec alacritty -e yazi ~/Pictures/favs
 
 # Media keys
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
