--- a/sway/config
+++ b/sway/config
@@ -15,10 +15,11 @@ bindsym $mod+p exec $clipboard
 bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 
 # Wallpaper
-bindsym $mod+r exec wbg "$(random_wllppr)"
-bindsym $mod+shift+r exec wbg "$(get_wllppr)"
+bindsym $mod+r exec pkill wbg && wbg "$(random_wllppr)"
+bindsym $mod+shift+r exec pkill wbg && wbg "$(get_wllppr)"
 bindsym $mod+s exec notify-send "$(favwall)"
 bindsym $mod+shift+s exec alacritty -e yazi ~/Pictures/favs
+exec wbg "$(random_wllppr)"
 
 # Media keys
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
@@ -147,26 +148,27 @@ exec brightnessctl set 100%
 
 # Work devices config
 output eDP-1 {
-    position 1920 0
+  position 1920 0
 }
 
 output HDMI-A-1 {
-    position 0 0
+  position 0 0
 }
 
 input "type:keyboard" {
-    repeat_delay 400
+  repeat_delay 400
     repeat_rate 50
     xkb_numlock enabled
     xkb_layout "br"
 }
 
 input * {
-    tap enabled
-    natural_scroll enabled
-    pointer_accel 0.4
-    accel_profile flat
-    scroll_method two_finger
+  tap enabled
+  natural_scroll enabled
+  pointer_accel -0.35
+  accel_profile flat
+  scroll_method two_finger
+  dwt enabled
 }
 
 default_border none
@@ -177,4 +179,4 @@ titlebar_border_thickness 0
 
 exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
+       dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
