fixed noisetorch | replaced floorp with zen

--- a/sway/config
+++ b/sway/config
@@ -138,7 +138,7 @@ workspace_layout tabbed
 # Init apps
 workspace 2
 exec --no-startup-id pgrep alacritty || exec $term --class "terminal" -e tmux
-exec --no-startup-id pgrep floorp || exec floorp
+exec --no-startup-id pgrep zen-browser || exec zen-browser
 workspace 1
 exec --no-startup-id pgrep spotify || exec spotify
 exec ferdium --enable-features=UseOzonePlatform --ozone-platform=wayland
