--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,14 +58,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @catppuccin_flavor 'mocha'
-set -g status-interval 1
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_status_modules_right "directory user host"
-
-run -b '$HOME/.config/tmux/plugins/tpm/tpm'
+run-shell /usr/share/nord-tmux/nord.tmux
 
