sway config | tmux tpm

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,4 +61,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run-shell /usr/share/nord-tmux/nord.tmux
-
+run -b '$HOME/.config/tmux/plugins/tpm/tpm'
