--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,6 +59,6 @@ set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
-run-shell /usr/share/nord-tmux/nord.tmux
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
