--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,6 @@
-background-opacity=0.5
+background-opacity=0.7
 gtk-titlebar = false
 keybind = global:unconsumed:alt+r=reload_config
 theme = deep
-font-family = CaskaydiaCove Nerd Font
-font-size = 11.5
+font-family = CaskaydiaCove Nerd Font Propo
+font-size = 11
