--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,14 @@
-background-opacity=0.7
 gtk-titlebar = false
+background-opacity=0.6
 keybind = global:unconsumed:alt+r=reload_config
 theme = deep
-font-family = CaskaydiaCove Nerd Font Propo
-font-size = 11
+font-family = CaskaydiaCove Nerd Font
+font-size = 10.5
+window-padding-x = 0
+window-padding-y = 0
+window-vsync = true
+cursor-style-blink = true
+font-family-bold = true
+minimum-contrast = 1.15
+adw-toolbar-style = raised
+bold-is-bright = true
