--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,6 +53,11 @@ set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
+set -g window-size latest
+setw -g aggressive-resize on
+set-option -g status-position bottom
+set -g window-style 'main-pane-height: "#{window_height}"'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'schasse/tmux-jump'
