--- a/sway/config
+++ b/sway/config
@@ -7,7 +7,6 @@ set $right l
 set $term ghostty
 set $menu fuzzel | xargs swaymsg exec --
 bindsym $mod+d exec $menu
-
 # Clipboard
 exec wl-paste --watch cliphist store
 set $clipboard cliphist list | fuzzel -I -d | cliphist decode | wl-copy
@@ -156,8 +155,8 @@ output HDMI-A-1 {
 }
 
 input "type:keyboard" {
-  repeat_delay 300
-  repeat_rate 80
+  repeat_delay 200
+  repeat_rate 100
   xkb_numlock enabled
   xkb_layout "br"
 }
@@ -169,6 +168,25 @@ input * {
   accel_profile flat
   scroll_method two_finger
   dwt enabled
+}
+
+seat seat0 hide_cursor 1000
+
+bindsym $mod+m mode "mouse"
+mode "mouse" {
+    bindsym KP_1 seat * cursor move -10 10
+    bindsym KP_2 seat * cursor move 0 10
+    bindsym KP_3 seat * cursor move 10 10
+    bindsym KP_4 seat * cursor move -10 0
+    bindsym KP_5 seat * cursor press button1
+    bindsym KP_6 seat * cursor move 10 0
+    bindsym KP_7 seat * cursor move -10 -10
+    bindsym KP_8 seat * cursor move 0 -10
+    bindsym KP_9 seat * cursor move 10 -10
+    bindsym --release KP_0 seat * cursor release button1
+    bindsym KP_0 seat * cursor press button1
+    bindsym KP_Enter seat * cursor press button3
+    bindsym Escape mode "default"
 }
 
 default_border none
