--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,7 @@
 gtk-titlebar = false
-background-opacity=0.65
+background-opacity=0.6
 keybind = global:unconsumed:alt+r=reload_config
-theme = Firefly Traditional
+theme = deep
 font-family = CaskaydiaCove Nerd Font Propo
 font-size = 10.5
 window-padding-x = 0
