--- a/i3status/config
+++ b/i3status/config
@@ -1,24 +1,18 @@
 general {
   output_format = "i3bar"
-    colors = true
-    interval = 1
+  colors = true
+  interval = 1
 }
 
 order += "wireless _first_"
-order += "ethernet _first_"
 order += "cpu_usage"
 order += "memory"
 order += "time"
 order += "battery 0"
 
 wireless _first_ {
-  format_up = "W: (%quality at %essid) %ip"
-    format_down = "W: down"
-}
-
-ethernet _first_ {
-  format_up = "E: %ip"
-    format_down = "E: down"
+  format_up = "%essid %ip %quality"
+  format_down = "W: down"
 }
 
 cpu_usage {
@@ -26,21 +20,21 @@ cpu_usage {
 }
 
 battery 0 {
-  format = "%status %percentage %remaining %emptytime"
-    format_down = "No battery"
-    status_chr = "⚡ "
-    status_bat = "🔋 "
-    status_unk = "? "
-    status_full = "☻ "
-    status_idle = "☻ "
-    path = "/sys/class/power_supply/BAT%d/uevent"
-    low_threshold = 10
+  format = "%status %percentage"
+  format_down = "No battery"
+  status_chr = "⚡ "
+  status_bat = "🔋 "
+  status_unk = "? "
+  status_full = "☻ "
+  status_idle = "☻ "
+  path = "/sys/class/power_supply/BAT%d/uevent"
+  low_threshold = 10
 }
 
 memory {
   format = "RAM: %percentage_used"
-    threshold_degraded = "10%"
-    threshold_critical = "5%"
+  threshold_degraded = "20%"
+  threshold_critical = "5%"
 }
 
 time {
