--- a/sway/config
+++ b/sway/config
@@ -196,3 +196,9 @@ workspace 3
 exec ferdium --enable-features=UseOzonePlatform --ozone-platform=wayland
 workspace 4
 exec --no-startup-id pgrep spotify || exec spotify
+
+assign [app_id="ghostty"] workspace 1
+assign [class="zen-browser"] workspace 2
+assign [class="Ferdium"] workspace 3
+assign [class="Spotify"] workspace 4
+
