--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,6 +43,9 @@ bind-key -r -T prefix C-j resize-pane -D
 bind-key -r -T prefix C-h resize-pane -L
 bind-key -r -T prefix C-l resize-pane -R
 
+bind-key -r -T prefix e choose-window 'join-pane -h -t "%%"'
+bind-key -r -T prefix C-e choose-session 'move-window -t "%%"'
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
