--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,6 +60,9 @@ set -g window-size latest
 setw -g aggressive-resize on
 set-option -g status-position bottom
 set -g window-style 'main-pane-height: "#{window_height}"'
+set -s set-clipboard on
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi y send-keys -X copy-pipe
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
