--- a/ghostty/config
+++ b/ghostty/config
@@ -1,9 +1,9 @@
 gtk-titlebar = false
 background-opacity=0.6
 keybind = global:unconsumed:alt+r=reload_config
-theme = deep
+theme = synthwave
 font-family = CaskaydiaCove Nerd Font Propo
-font-size = 11
+font-size = 10.5
 window-padding-x = 0
 window-padding-y = 0
 cursor-style-blink = true
