--- a/sway/config
+++ b/sway/config
@@ -33,7 +33,7 @@ bindsym Print exec sway-interactive-screenshot
 bindsym shift+Print exec sway-interactive-screenshot -s focused-window
 
 set $wall $HOME/Pictures/walls
-set $lock swaylock --image $HOME/Pictures/favs/ggdc_wall.png -s fill
+set $lock swaylock --image $HOME/Pictures/favs/0d3c6jon7mw11.jpg -s fill
 bindsym $mod+Escape exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Pause & $lock
 
 bindsym $mod+delete exec kill_ps
@@ -201,6 +201,6 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
 
 workspace 1
 exec --no-startup-id pgrep ghostty || exec $term -e tmux
-exec --no-startup-id pgrep zen-browser || exec zen-browser
-exec ferdium --enable-features=UseOzonePlatform --ozone-platform=wayland
-exec --no-startup-id pgrep spotify || exec spotify
+#exec --no-startup-id pgrep zen-browser || exec zen-browser
+#exec ferdium --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec --no-startup-id pgrep spotify || exec spotify --enable-features=UseOzonePlatform --ozone-platform=wayland
