--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -42,8 +42,8 @@ sidebar_config        = 1
 [Patch]
 
 [Backup]
-version              = 1.2.53.440.g7b2f582a
-with                 = 2.39.0
+version              = 1.2.56.502.ga68d2d4f
+with                 = 2.39.2
 spotify_launch_flags = --enable-features=UseOzonePlatform --ozone-platform=wayland
 enable_marketplace   = 1
 custom_apps          = marketplace
