power-bar costumization | new work monitor

--- a/sway/config
+++ b/sway/config
@@ -123,8 +123,14 @@ output eDP-1 {
   position 1920 0
 }
 
-output HDMI-A-1 {
+output DP-1 {
   position 0 0
+}
+
+output HDMI-A-1 {
+  position -1080 0
+  transform 270
+  mode 1920x1080@60Hz
 }
 
 input "type:keyboard" {
