--- a/sway/config
+++ b/sway/config
@@ -37,8 +37,8 @@ set $lock swaylock --image $HOME/Pictures/favs/0d3c6jon7mw11.jpg -s fill
 bindsym $mod+Escape exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Pause & $lock
 
 bindsym $mod+delete exec kill_ps
-bindsym $mod+tab exec window_selector
-bindsym $mod+shift+tab exec switcheroo
+bindsym $mod+tab exec switcheroo
+bindsym $mod+shift+tab exec window_selector
 
 bindsym $mod+apostrophe exec passotp
 
