--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,7 +13,6 @@ bind C-v paste-buffer
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 
-#edit pane
 set-option -g history-limit 20000
 bind-key -n M-e run-shell "tmux-capture-pane"
 
@@ -22,7 +21,6 @@ bind -n M-j select-pane -D
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 
-# switch windows alt+number
 bind-key -n M-\' select-window -t 0
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
@@ -46,7 +44,21 @@ bind-key -r -T prefix C-l resize-pane -R
 bind-key -r -T prefix e choose-window 'join-pane -h -t "%%"'
 bind-key -r -T prefix C-e choose-session 'move-window -t "%%"'
 
-# Start windows and panes at 1, not 0
+bind "'" \
+  set key-table off \; \
+  set prefix None \; \
+  set prefix2 None \; \
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \; \
+  refresh-client -S \; \
+  display-message "Nested tmux control ON"
+
+bind -T off "'" \
+  set -u key-table \; \
+  set -u prefix \; \
+  set -u prefix2 \; \
+  refresh-client -S \; \
+  display-message "Nested tmux control OFF"
+
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
@@ -64,12 +76,12 @@ set -s set-clipboard on
 unbind -T copy-mode-vi MouseDragEnd1Pane
 bind -T copy-mode-vi y send-keys -X copy-pipe
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_show_netspeed 1
 
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
