--- a/git/config
+++ b/git/config
@@ -1,13 +1,47 @@
 [user]
-    email = romaxino@gmail.com
-    name = icedwolf
+email = romaxino@gmail.com
+name = icedwolf
 [credential "https://github.com"]
-    helper = !/usr/bin/gh auth git-credential
+helper = !/usr/bin/gh auth git-credential
 [credential "https://gist.github.com"]
-    helper = !/usr/bin/gh auth git-credential
+helper = !/usr/bin/gh auth git-credential
 [init]
-	defaultBranch = main
+defaultBranch = main
 [core]
-	pager = diff-so-fancy | less --tabs=4 -RF
+pager = diff-so-fancy | less --tabs=4 -RF
 [interactive]
-	diffFilter = diff-so-fancy --patch
+diffFilter = diff-so-fancy --patch
+[column]
+ui = auto
+[branch]
+sort = -committerdate
+[tag]
+sort = version:refname
+[init]
+defaultBranch = main
+[diff]
+algorithm = histogram
+colorMoved = plain
+mnemonicPrefix = true
+renames = true
+[push]
+default = simple
+autoSetupRemote = true
+followTags = true
+[fetch]
+prune = true
+pruneTags = true
+all = true
+[help]
+autocorrect = prompt
+[commit]
+verbose = true
+[rerere]
+enabled = true
+autoupdate = true
+[core]
+excludesfile = ~/.gitignore
+[rebase]
+autoSquash = true
+autoStash = true
+updateRefs = true
