tmux synchronize-panes with prefix+s

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,6 +44,8 @@ bind-key -r -T prefix C-l resize-pane -R
 bind-key -r -T prefix e choose-window 'join-pane -h -t "%%"'
 bind-key -r -T prefix C-e choose-session 'move-window -t "%%"'
 
+bind s setw synchronize-panes
+
 bind "'" \
   set key-table off \; \
   set prefix None \; \
