--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -35,7 +35,7 @@ disable_ui_logging = 1
 [AdditionalOptions]
 home_config           = 1
 experimental_features = 1
-extensions            = power-bar.js
+extensions            = power-bar.js|shuffle+.js|queueAll.js|trashbin.js
 custom_apps           = 
 sidebar_config        = 1
 
