sway media keys

--- a/sway/config
+++ b/sway/config
@@ -15,10 +15,10 @@ bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 
 bindsym $mod+r exec pkill wbg && wbg "$(random_wllppr)"
 bindsym $mod+shift+r exec pkill wbg && wbg "$(get_wllppr)"
-bindsym $mod+s exec notify-send "$(favwall)"
 exec wbg "$(random_wllppr)"
 
 set $player org.mpris.MediaPlayer2.spotify
+set $dbus_send dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
 bindsym XF86AudioLowerVolume exec amixer sset Master 5%-
 bindsym Shift+XF86AudioRaiseVolume exec amixer sset Capture 5%+
@@ -27,17 +27,19 @@ bindsym Shift+XF86AudioMute exec amixer sset Capture toggle
 bindsym XF86AudioMute exec amixer sset Master toggle
 bindsym XF86MonBrightnessDown exec brightnessctl set 15%-
 bindsym XF86MonBrightnessUp exec brightnessctl set +15%
-bindsym --locked XF86AudioPlay exec dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
-bindsym XF86AudioNext exec dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
-bindsym XF86AudioPrev exec dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+bindsym --locked XF86AudioPlay exec $dbus_send.PlayPause
+bindsym XF86AudioNext exec $dbus_send.Next
+bindsym $mod+s exec $dbus_send.Next
+bindsym XF86AudioPrev exec $dbus_send.Previous
+bindsym $mod+a exec $dbus_send.Previous
 bindsym $mod+n exec noisetorch -i -t 90
-bindsym $mod+u exec noisetorch -u
+bindsym $mod+i exec noisetorch -u
 bindsym Print exec sway-interactive-screenshot
 bindsym shift+Print exec sway-interactive-screenshot -s focused-window
 
 set $wall $HOME/Pictures/walls
 set $lock swaylock --image $HOME/Pictures/favs/0d3c6jon7mw11.jpg -s fill
-bindsym $mod+Escape exec dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Pause & $lock
+bindsym $mod+Escape exec $dbus_send.Pause & $lock
 
 bindsym $mod+delete exec kill_ps
 bindsym $mod+tab exec switcheroo
@@ -94,9 +96,6 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+f fullscreen
 
-bindsym $mod+Shift+space floating toggle
-bindsym $mod+space focus mode_toggle
-bindsym $mod+a focus parent
 bindsym $mod+Control+Shift+l move workspace to output right
 bindsym $mod+Control+Shift+h move workspace to output left
 bindsym $mod+Control+Shift+j move workspace to output down
