sway keybind | spicetify update

--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -42,7 +42,7 @@ sidebar_config        = 1
 [Patch]
 
 [Backup]
-version              = 1.2.56.502.ga68d2d4f
+version              = 1.2.59.514.g834e17d4
 with                 = 2.39.5
 spotify_launch_flags = --enable-features=UseOzonePlatform --ozone-platform=wayland
 enable_marketplace   = 1
