--- a/k9s/config.yaml
+++ b/k9s/config.yaml
@@ -1,5 +1,5 @@
 k9s:
-  liveViewAutoRefresh: false
+  liveViewAutoRefresh: true
   refreshRate: 2
   maxConnRetry: 5
   readOnly: false
@@ -14,27 +14,9 @@ k9s:
     reactive: false
   skipLatestRevCheck: false
   disablePodCounting: false
-  shellPod:
-    image: busybox:1.35.0
-    namespace: default
-    limits:
-      cpu: 100m
-      memory: 100Mi
-  imageScans:
-    enable: false
-    exclusions:
-      namespaces: []
-      labels: {}
   logger:
-    tail: 100
+    fullScreen: true
+    tail: 1000
     buffer: 5000
     sinceSeconds: -1
-    textWrap: false
-    showTime: false
-  thresholds:
-    cpu:
-      critical: 90
-      warn: 70
-    memory:
-      critical: 90
-      warn: 70
+    textWrap: true
