--- a/k9s/config.yaml
+++ b/k9s/config.yaml
@@ -3,20 +3,38 @@ k9s:
   refreshRate: 2
   maxConnRetry: 5
   readOnly: false
-  noExitOnCtrlC: false
+  noExitOnCtrlC: true
+  portForwardAddress: localhost
   ui:
     skin: freak
     enableMouse: false
     headless: false
     logoless: false
     crumbsless: false
-    noIcons: false
     reactive: false
+    noIcons: false
   skipLatestRevCheck: false
   disablePodCounting: false
+  shellPod:
+    image: busybox:1.35.0
+    namespace: default
+    limits:
+      cpu: 100m
+      memory: 100Mi
+    tty: true
+  imageScans:
+    enable: false
   logger:
-    fullScreen: true
     tail: 1000
     buffer: 5000
-    sinceSeconds: -1
+    sinceSeconds: 300
+    fullScreen: true
     textWrap: true
+    showTime: false
+  thresholds:
+    cpu:
+      critical: 90
+      warn: 70
+    memory:
+      critical: 90
+      warn: 70
