--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -1,30 +1,24 @@
-prefs_path              = 
-current_theme           = 
-inject_css              = 0
-replace_colors          = 0
-disable_sentry          = 1
-disable_ui_logging      = 1
-remove_rtl_rule         = 1
-experimental_features   = 0
-disable_social_features = 1
-disable_podcasts        = 1
-disable_videos          = 1
-disable_canvas          = 1
-disable_suggestions     = 1
-disable_discover        = 1
+[AdditionalOptions]
+sidebar_config        = 1
+home_config           = 1
+experimental_features = 1
+extensions            = 
+custom_apps           = marketplace
+
+[Patch]
 
 [Setting]
-spotify_path           = /opt/spotify/
-color_scheme           = 
-always_enable_devtools = 0
-spotify_launch_flags   = 
-check_spicetify_update = 1
-prefs_path             = /home/icedwolf/.config/spotify/prefs
-current_theme          = 
-inject_theme_js        = 1
 inject_css             = 1
 replace_colors         = 1
+spotify_launch_flags   = 
+check_spicetify_update = 1
+current_theme          = marketplace
+color_scheme           = 
 overwrite_assets       = 0
+always_enable_devtools = 0
+spotify_path           = /opt/spotify/
+prefs_path             = /home/icedwolf/.config/spotify/prefs
+inject_theme_js        = 1
 
 [Preprocesses]
 remove_rtl_rule    = 1
@@ -32,19 +26,7 @@ expose_apis        = 1
 disable_sentry     = 1
 disable_ui_logging = 1
 
-[AdditionalOptions]
-home_config           = 1
-experimental_features = 1
-extensions            = power-bar.js|shuffle+.js|queueAll.js|trashbin.js
-custom_apps           = 
-sidebar_config        = 1
-
-[Patch]
-
+; DO NOT CHANGE!
 [Backup]
-version              = 1.2.59.514.g834e17d4
-with                 = 2.39.6
-spotify_launch_flags = --enable-features=UseOzonePlatform --ozone-platform=wayland
-enable_marketplace   = 1
-custom_apps          = marketplace
-extensions           = powerBar.js
+version = 1.2.60.564.gcc6305cb
+with    = 2.40.0
