--- a/configs/containers/containers.conf
+++ b/configs/containers/containers.conf
@@ -1,3 +1,4 @@
+[containers]
 default_capabilities = [
   "CHOWN",
   "DAC_OVERRIDE",
@@ -11,3 +12,5 @@ default_capabilities = [
   "SETUID",
   "SYS_CHROOT",
 ]
+[engine]
+cgroup_manager = "cgroupfs"
