--- a/configs/sway/config
+++ b/configs/sway/config
@@ -40,8 +40,10 @@ set $term ghostty
 set $menu fuzzel | xargs swaymsg exec --
 bindsym $mod+d exec $menu
 
-exec wl-paste --watch cliphist store
+set $type_clipboard cliphist list | fuzzel -d | cliphist decode | wtype -
+bindsym $mod+v exec $type_clipboard
 set $clipboard cliphist list | fuzzel -I -d | cliphist decode | wl-copy
+exec wl-paste --watch cliphist store
 bindsym $mod+p exec $clipboard
 bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 
@@ -120,8 +122,6 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
 
-bindsym $mod+b splith
-bindsym $mod+v splitv
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+f fullscreen
