--- a/configs/sway/config
+++ b/configs/sway/config
@@ -1,4 +1,3 @@
-# Color Variables
 set $fg_color #c5c8c6
 set $bg_color #1d1f21
 set $accent_color #00ff00
@@ -6,19 +5,15 @@ set $white_color #ffffff
 set $black_color #000000
 set $grey_color #666666
 set $red_color #ff0000
-set $bar_bg_color #101010
+set $bar_bg_color #101010CF
 
-# Path/Command Variables
-set $random_wallpaper_cmd random_wllppr
-set $lock_cmd swaylock --image "$($random_wallpaper_cmd)" -s fill
-set $wallpaper_dir $HOME/Pictures/walls
+set $lock_cmd swaylock --image "$(random_wllppr)" -s fill
 set $status_command ~/dotfiles/scripts/mi3status
 set $browser waterfox
 set $terminal_app ghostty
 set $music_app spotify
 set $messaging_app ferdium
 
-# Numerical Variables
 set $gap_size 1
 set $titlebar_padding_size 3
 set $font_size_small 0.001
@@ -45,10 +40,10 @@ bindsym $mod+v exec $type_clipboard
 set $clipboard cliphist list | fuzzel -I -d | cliphist decode | wl-copy
 exec wl-paste --watch cliphist store
 bindsym $mod+p exec $clipboard
-bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
+bindsym $mod+shift+p exec cliphist wipe | fyi "Clipboard" "Cleared"
 
-bindsym $mod+r exec pkill wbg && wbg -s "$($random_wallpaper_cmd)"
-exec wbg -s "$($random_wallpaper_cmd)"
+bindsym $mod+r exec swaymsg output "*" bg "$(random_wllppr)" fit
+output "*" bg "$(random_wllppr)" fit
 
 set $player org.mpris.MediaPlayer2.spotify
 set $dbus_send dbus-send --print-reply --dest=$player /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
@@ -66,10 +61,9 @@ bindsym XF86AudioNext exec $dbus_send.Next
 bindsym $mod+s exec $dbus_send.Next
 bindsym XF86AudioPrev exec $dbus_send.Previous
 bindsym $mod+a exec $dbus_send.Previous
-bindsym Print exec sway-interactive-screenshot
-bindsym shift+Print exec sway-interactive-screenshot -s focused-window
+bindsym Print exec slurp | grim -g - - | wl-copy
+bindsym shift+Print exec grim -o "$(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')" | wl-copy
 
-set $wall $HOME/Pictures/walls
 set $lock swaylock --image "$(random_wllppr)" -s fill
 bindsym $mod+Escape exec $dbus_send.Pause & $lock
 
