--- a/configs/sway/config
+++ b/configs/sway/config
@@ -62,8 +62,7 @@ bindsym $mod+s exec $dbus_send.Next
 bindsym XF86AudioPrev exec $dbus_send.Previous
 bindsym $mod+a exec $dbus_send.Previous
 bindsym Print exec slurp | grim -g - - | wl-copy
-bindsym shift+Print exec grim -o "$(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name')" | wl-copy
-
+bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy
 set $lock swaylock --image "$(random_wllppr)" -s fill
 bindsym $mod+Escape exec $dbus_send.Pause & $lock
 
