--- a/configs/i3status/config
+++ b/configs/i3status/config
@@ -6,43 +6,43 @@ general {
 }
 
 order += "volume master"
-order += "wireless _first_"
+order += "wireless *first*"
 order += "cpu_usage"
 order += "memory"
 order += "battery 0"
 order += "time"
 
-wireless _first_ {
-  format_up = "%essid %ip %quality"
-  format_down = "W: down"
+wireless *first* {
+  format_up = "📶 <span color='#7aa2f7'>%essid %quality</span>"
+  format_down = "📶 <span color='#f7768e'>down</span>"
 }
 
 cpu_usage {
-  format = "<span color='#FF00FF'>CPU: %usage</span>"
+  format = "🖥️ <span color='#7aa2f7'>%usage</span>"
 }
 
 battery 0 {
-  format = "<span color='#00FF00'>%status %percentage</span>"
+  format = "🔋 <span color='#9ece6a'>%percentage</span>"
   status_chr = "⚡ "
   status_bat = "🔋 "
-  status_full = "☻ "
-  status_idle = "☻ "
+  status_full = "✅ "
+  status_idle = "🟢 "
   path = "/sys/class/power_supply/BAT%d/uevent"
   low_threshold = 20
 }
 
 volume master {
-        format = "<span color='#4287f5'>♪: %volume</span>"
-        format_muted = "<span color='#4287f5'>♪: muted (%volume)</span>"
+        format = "🔊 <span color='#bb9af7'>%volume</span>"
+        format_muted = "🔇 <span color='#f7768e'>muted (%volume)</span>"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
 }
 
 memory {
-  format = "<span color='#00FFFF'>RAM: %percentage_used</span>"
+  format = "💾 <span color='#e0af68'>%percentage_used</span>"
 }
 
 time {
-  format = "<span color='#FF5F5F'>%d-%m %H:%M:%S</span>"
+  format = "🕐 <span color='#7dcfff'>%d-%m %H:%M:%S</span>"
 }
