--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -83,6 +83,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 
+set -g @tokyo-night-tmux_theme night
 set -g @tokyo-night-tmux_transparent 1
 set -g @tokyo-night-tmux_show_datetime 0
 
