--- a/configs/sway/config
+++ b/configs/sway/config
@@ -1,4 +1,3 @@
-# Tokyo Night color scheme
 set $fg_color #c0caf5
 set $bg_color #1a1b26
 set $accent_color #5599ff
@@ -8,7 +7,6 @@ set $grey_color #565f89
 set $red_color #ff5f87
 set $bar_bg_color #000A0A9F
 
-# Tokyo Night additional colors
 set $blue_color #3388ff
 set $cyan_color #00ccff
 set $green_color #66ff33
@@ -40,7 +38,6 @@ set $left h
 set $down j
 set $up k
 set $right l
-set $term st
 set $menu fuzzel | xargs swaymsg exec --
 bindsym $mod+d exec $menu
 
@@ -85,7 +82,7 @@ floating_modifier $mod normal
 
 bindsym $mod+Up exec makoctl restore
 bindsym $mod+Down exec makoctl dismiss -a
-bindsym $mod+Return exec $term -e tmux
+bindsym $mod+Return exec $terminal_app -e tmux
 bindsym $mod+q kill
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exec swaynag -t warning -m 'Exit?' -B 'Yes' 'swaymsg exit'
@@ -133,7 +130,6 @@ bindsym $mod+Control+Shift+h move workspace to output left
 bindsym $mod+Control+Shift+j move workspace to output down
 bindsym $mod+Control+Shift+k move workspace to output up
 
-# Gaps
 gaps inner $gap_size
 gaps outer $gap_size
 gaps horizontal $gap_size
@@ -243,7 +239,7 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
 workspace 1
 exec --no-startup-id pgrep waterfox || exec waterfox
 workspace 2
-exec --no-startup-id pgrep st || exec $term -e tmux
+exec $terminal_app -e tmux
 exec --no-startup-id pgrep spotify || exec spotify
 workspace 3
 exec --no-startup-id pgrep ferdium || exec ferdium
